fix: harden security - lock CORS origins, remove default JWT secret, set ddl-auto=validate in prod